add testcode with inmemory db.
